--- a/cardStyles.css
+++ b/cardStyles.css
@@ -3,16 +3,32 @@
   overflow-x: auto;
 }
 
+.list-wrapper:first-child {
+  padding-left: 1em;
+}
+
+.list-wrapper > div {
+  min-width: 17em;
+  flex-grow: 0;
+}
+
 .card-list, .trello-card {
   border-radius: 0.25em;
 }
 
-.card-list {
-  min-width: 17em;
+.field-element {
+  margin-top: 0.5em !important;
+  box-shadow: .7px 0px 4px 1px grey,-0.7px 0px 4px 1px grey,0px .7px 4px 1px grey,0px -0.7px 4px 1px grey;
+}
+
+.list-body {
+  max-height: 25em;
+  overflow-y: auto;
 }
 
 .trello-card {
-  background-color: #555;
+  background-color: #6f6f6f;
+  box-shadow: 0px 0.3px 0.5px 0.5px #444;
   position: relative;
 }
 
@@ -52,7 +68,10 @@
 .more-options-button {
   position: absolute;
   right: 0;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   width: 2em;
   text-align: center;
   border-radius: 0.25em;
@@ -100,7 +119,8 @@
 }
 
 .modal-btn:hover {
-  filter: brightness(112%);
+  -webkit-filter: brightness(112%);
+          filter: brightness(112%);
   cursor: pointer;
   font-weight: bolder;
   line-height: 2em;
@@ -109,5 +129,60 @@
 }
 
 #archive-btn:hover {
-  filter: brightness(112%);
+  -webkit-filter: brightness(112%);
+          filter: brightness(112%);
+}
+
+.list-tail-btn {
+  background-color: none;
+  display: block;
+  font-size: .9em;
+  padding: 0.2em 0.5em;
+  border-radius: 0.5em;
+}
+
+.list-tail-btn:hover {
+  background-color: #eee;
+  color: #333;
+  cursor: pointer;
+}
+
+#newListBtn {
+  border-right: 16px solid transparent;
+}
+
+#newListBtn a {
+  margin-top: 0 !important;
+  border-radius: 0.25em;
+  background-color: rgba(223, 223, 223, 0.3);
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  height: 2.5em;
+  line-height: 2.5em;
+}
+
+#newListBtn a:hover {
+  background-color: #ddd;
+  color: #333;
+}
+
+#newlist-field {
+  margin-top: 0.5em;
+  box-shadow: .7px 0px 4px 1px grey,-0.7px 0px 4px 1px grey,0px .7px 4px 1px grey,0px -0.7px 4px 1px grey;
+  height: auto;
+  overflow-y: auto;
+}
+
+#newlist-field input {
+  width: 100%;
+  line-height: 1.8em;
+}
+
+.newListAction:first-child {
+  background-color: #338333;
+}
+
+.newListAction:first-child:hover {
+  background-color: #197419;
 }
