--- a/cardStyles.css
+++ b/cardStyles.css
@@ -186,3 +186,27 @@
 .newListAction:first-child:hover {
   background-color: #197419;
 }
+
+.cardmodal-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(12,12,12,0.3);
+  z-index: 999;
+}
+
+.cardmodal {
+  background-color: #ddd;
+  box-shadow: 1px 1px 3px 2px black;
+  width: 34em;
+  height: 80%;
+  overflow: auto;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url(https://i.kym-cdn.com/entries/icons/original/000/032/100/cover4.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
