--- a/cardStyles.css
+++ b/cardStyles.css
@@ -205,7 +205,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-image: url(https://i.kym-cdn.com/entries/icons/original/000/032/100/cover4.jpg);
+  /* background-image: url(https://i.kym-cdn.com/entries/icons/original/000/032/100/cover4.jpg); */
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
