changed add new list button color

--- a/cardStyles.css
+++ b/cardStyles.css
@@ -180,11 +180,11 @@
 }
 
 .newListAction:first-child {
-  background-color: #338333;
+  background-color: #348a70;
 }
 
 .newListAction:first-child:hover {
-  background-color: #197419;
+  background-color: #387d68;
 }
 
 .cardmodal-wrapper {
