--- a/cardStyles.css
+++ b/cardStyles.css
@@ -24,9 +24,34 @@
 .list-body {
   max-height: 25em;
   overflow-y: auto;
+  /* overflow-y: scroll; */
+  padding: 0 0.2em;
+}
+
+.list-body::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+.list-body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 5px;
+}
+
+/* Handle */
+.list-body::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.list-body::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
 }
 
 .trello-card {
+  width: 100%;
+  margin: auto;
   background-color: #6f6f6f;
   box-shadow: 0px 0.3px 0.5px 0.5px #444;
   position: relative;
