--- a/indexStyle.css
+++ b/indexStyle.css
@@ -16,6 +16,7 @@ body {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
+  font-size: 0.9em;
 }
 
 a {
