improved light fonts

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -16,11 +16,10 @@ body {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-size: 0.9em;
 }
 
 a {
-  color: white;
+  color: #eee;
 }
 
 i:hover {
@@ -41,6 +40,10 @@ i:hover {
 
 .trans-buttons {
   height: 2em;
+}
+
+.fa-search {
+  color: #eee;
 }
 
 .fa-search, .fa-share, .fa-times, .navbar, .secondarynav {
