--- a/cardStyles.css
+++ b/cardStyles.css
@@ -1,6 +1,7 @@
 .list-wrapper {
   width: 100%;
   overflow-x: auto;
+  color: #eee;
 }
 
 .list-wrapper:first-child {
@@ -40,13 +41,13 @@
 
 /* Handle */
 .list-body::-webkit-scrollbar-thumb {
-  background: red;
+  background: #e9e9e9;
   border-radius: 10px;
 }
 
 /* Handle on hover */
 .list-body::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
+  background: #232323;
 }
 
 .trello-card {
@@ -180,7 +181,7 @@
   margin-top: 0 !important;
   border-radius: 0.25em;
   background-color: rgba(223, 223, 223, 0.3);
-  color: #fff;
+  color: #eee;
   text-decoration: none;
   display: block;
   height: 2.5em;
