--- a/cardStyles.css
+++ b/cardStyles.css
@@ -22,6 +22,10 @@
   box-shadow: .7px 0px 4px 1px grey,-0.7px 0px 4px 1px grey,0px .7px 4px 1px grey,0px -0.7px 4px 1px grey;
 }
 
+.list-head h5 {
+  width: 90%;
+}
+
 .list-body {
   max-height: 25em;
   overflow-y: auto;
