--- a/cardStyles.css
+++ b/cardStyles.css
@@ -221,7 +221,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(12,12,12,0.3);
+  background-color: rgba(10,10,10,0.45);
   z-index: 999;
 }
 
@@ -239,4 +239,5 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  border-radius: 0.5em;
 }
