--- a/indexStyle.css
+++ b/indexStyle.css
@@ -18,6 +18,18 @@ body {
   background-size: cover;
 }
 
+input {
+  outline: none;
+  border-radius: 0.2em;
+  border-color: none;
+  border-style: solid;
+}
+
+input:focus {
+  outline: none;
+  border-color: transparent;
+}
+
 a {
   color: #eee;
 }
